--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar.get_es.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar.get_es.properties
@@ -1,55 +1,20 @@
-## Buttons
-button.create-content=Crear contenido...
-button.new-folder=Nueva carpeta
-button.up=Subir nivel
-button.customize=Personalizar
-button.navbar.show=Mostrar la barra de navegaci\u00f3n
-button.navbar.hide=Ocultar la barra de navegaci\u00f3n
+button.new-row=Nuevo elemento
+button.print=Imprimir
+button.rss-feed=Canal RSS
 
-## Links
-link.rss-feed=Canal RSS
+label.new-row.title=Crear nuevo elemento
+
+message.new-row.success=Nuevo elemento a\u00f1adido con \u00e9xito
+message.new-row.failure=No se pudo a\u00f1adir un nuevo elemento a la Lista de datos
+message.confirm.delete.title=Eliminar {0} elementos
+message.confirm.delete.description=\u00bfEst\u00e1 seguro de que quiere eliminar {0} elementos?
+message.delete.success=Se eliminaron con \u00e9xito {0} elementos
+message.delete.failure=No se pudieron eliminar los elementos
+message.duplicate.success=Se duplicaron con \u00e9xito {0} elementos
+message.duplicate.failure=No se pudieron duplicar los elementos
 
 ## Drop-down Menus
-menu.create-content.by-template-node=Por nodo de plantilla...
 menu.selected-items=Elementos seleccionados...
-menu.selected-items.copy=Copiar a...
-menu.selected-items.move=Mover a...
+menu.selected-items.duplicate=Duplicar
 menu.selected-items.delete=Eliminar
-menu.selected-items.assign-workflow=Iniciar un flujo de trabajo...
-menu.selected-items.manage-permissions=Administrar los permisos...
 menu.selected-items.deselect-all=Deseleccionar todo
-
-## Pop-up Messages
-message.create-content-by-template-node.success=Contenido creado a partir de la plantilla ''{0}''
-message.create-content-by-template-node.failure=No se pudo crear el contenido a partir de la plantilla ''{0}''
-message.new-folder.success=Se ha creado la carpeta ''{0}''
-message.new-folder.failure=No se ha podido crear ''{0}''. \u00bfNombre duplicado?
-message.multiple-delete.success=Se eliminaron con \u00e9xito {0} elemento(s).
-message.multiple-delete.failure=No se puede eliminar los elementos.
-title.multiple-delete.confirm=Confirme la eliminaci\u00f3n m\u00faltiple
-message.multiple-delete.confirm=\u00bfEst\u00e1 seguro que quiere eliminar los {0} elementos siguientes?
-message.multiple-delete.please-wait=Por favor espere. Se est\u00e1n borrando los ficheros...
-
-## Toolbar Modes
-description.path=
-description.path.more=
-description.all=Todos los documentos de la biblioteca de documentos
-description.all.more=
-description.editingMe=Documentos que estoy editando
-description.editingMe.more=(copia de trabajo)
-description.editingOthers=Documentos editados por otros
-description.editingOthers.more=(copia de trabajo)
-description.recentlyModified=Documentos modificados recientemente
-description.recentlyModified.more=
-description.recentlyAdded=Documentos a\u00f1adidos recientemente
-description.recentlyAdded.more=
-description.favourites=Mis documentos y carpetas favoritos
-description.favourites.more=
-description.tag=Documentos y carpetas etiquetados como
-description.tag.more={0}
-description.category=
-description.category.more=
-
-## Dialogs
-label.new-folder.title=Nueva carpeta
-label.new-folder.header=Detalles de nueva carpeta
