--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/dictionary.main.get_ru.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/dictionary.main.get_ru.properties
@@ -6,3 +6,4 @@ dictionary.append=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C
 dictionary.append.employee=Items
 dictionary.append.division=Dictionary
 dictionary.append.folder=Folder
+button.new-list=Add
