--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/datagrid.get_ru.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/datagrid.get_ru.properties
@@ -35,5 +35,5 @@ actions.view=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0435\u0442\u044c
 actions.edit=\u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c
 actions.duplicate-row=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043a\u043e\u043f\u0438\u044e
 actions.delete-row=\u0423\u0434\u0430\u043b\u0438\u0442\u044c
-version.preview=Preview Version
-actions.more=Preview Version
+version.preview=\u041f\u0440\u0435\u0434\u044b\u0434\u0443\u0449\u0438\u0435 \u0432\u0435\u0440\u0441\u0438\u0438
+actions.more=\u041f\u0440\u0435\u0434\u044b\u0434\u0443\u0449\u0438\u0435 \u0432\u0435\u0440\u0441\u0438\u0438
