ALF-42 - Просмотр иерархий и списков [+]Добавлены контролы для полей [+] Добавлено всплывающее меню к дереву [~]Другие исправления
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@190 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/OrgStructure/share/src/main/java/ru/it/lecm/orgstructure/form/form_ru.properties
+++ b/OrgStructure/share/src/main/java/ru/it/lecm/orgstructure/form/form_ru.properties
@@ -1,2 +1,9 @@
-logicecm.orgstructure.employee.workplace=\u0420\u0430\u0431\u043E\u0447\u0435\u0435 \u043C\u0435\u0441\u0442\u043E
-logicecm.orgstructure.employee.person=\u0410\u043A\u043A\u0430\u0443\u043D\u0442
+button.new-composition=\u041D\u043E\u0432\u044B\u0439 \u0441\u043E\u0441\u0442\u0430\u0432
+button.new-workforce=\u041D\u043E\u0432\u044B\u0439 \u0442\u0440\u0443\u0434\u043E\u0432\u043E\u0439 \u0440\u0435\u0441\u0443\u0440\u0441
+control.table.column.employee.title=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
+control.table.column.position.title=\u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u044C
+control.table.column.boss.title=\u0420\u0443\u043A\u043E\u0432\u043E\u0434\u0438\u0442\u0435\u043B\u044C
+control.table.column.primary.title=\u041E\u0441\u043D\u043E\u0432\u043D\u043E\u0439
+control.table.column.actions.title=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044F
+control.table.column.role.title=\u0420\u043E\u043B\u044C
+message.new-element.success=\u041D\u043E\u0432\u044B\u0439 \u044D\u043B\u0435\u043C\u0435\u043D\u0442 \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u0434\u043E\u0431\u0430\u0432\u043B\u0435\u043D
