--- a/OrgStructure/share/src/main/java/ru/it/lecm/orgstructure/form/form_ru.properties
+++ b/OrgStructure/share/src/main/java/ru/it/lecm/orgstructure/form/form_ru.properties
@@ -7,3 +7,4 @@ control.table.column.primary.title=\u041E\u0441\u043D\u043E\u0432\u043D\u043E\u0
 control.table.column.actions.title=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044F
 control.table.column.role.title=\u0420\u043E\u043B\u044C
 message.new-element.success=\u041D\u043E\u0432\u044B\u0439 \u044D\u043B\u0435\u043C\u0435\u043D\u0442 \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u0434\u043E\u0431\u0430\u0432\u043B\u0435\u043D
+message.new-element.failure=\u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u044D\u043B\u0435\u043C\u0435\u043D\u0442
