--- a/OrgStructure/repo/src/main/config/messages/orgstructure_ru.properties
+++ b/OrgStructure/repo/src/main/config/messages/orgstructure_ru.properties
@@ -173,11 +173,11 @@ lecm-orgstr_organizationStructure.association.lecm-orgstr_composition-position-a
 lecm-orgstr_organizationStructure.association.lecm-orgstr_composition-employee-assoc.title=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
 lecm-orgstr_organizationStructure.association.lecm-orgstr_composition-employee-assoc.description=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
 
-listcontstraint.lecm-orgstr_employee-sex-const.MALE=\u041C\u0443\u0436\u0441\u043A\u043E\u0439
-listcontstraint.lecm-orgstr_employee-sex-const.FEMALE=\u0416\u0435\u043D\u0441\u043A\u0438\u0439
+listconstraint.lecm-orgstr_employee-sex-const.MALE=\u041C\u0443\u0436\u0441\u043A\u043E\u0439
+listconstraint.lecm-orgstr_employee-sex-const.FEMALE=\u0416\u0435\u043D\u0441\u043A\u0438\u0439
 
-listcontstraint.lecm-orgstr_unit-type-const.SEPARATED=\u041E\u0431\u043E\u0441\u043E\u0431\u043B\u0435\u043D\u043D\u043E\u0435
-listcontstraint.lecm-orgstr_unit-type-const.SEGREGATED=\u041D\u0435\u043E\u0431\u043E\u0441\u043E\u0431\u043B\u0435\u043D\u043D\u043E\u0435
+listconstraint.lecm-orgstr_unit-type-const.SEPARATED=\u041E\u0431\u043E\u0441\u043E\u0431\u043B\u0435\u043D\u043D\u043E\u0435
+listconstraint.lecm-orgstr_unit-type-const.SEGREGATED=\u041D\u0435\u043E\u0431\u043E\u0441\u043E\u0431\u043B\u0435\u043D\u043D\u043E\u0435
 
 
 
