--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar.get_ru.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar.get_ru.properties
@@ -1,6 +1,7 @@
 button.new-row=\u041d\u043e\u0432\u044b\u0439 \u044d\u043b\u0435\u043c\u0435\u043d\u0442
 button.print=\u041f\u0435\u0447\u0430\u0442\u044c
 button.rss-feed=\u041b\u0435\u043d\u0442\u0430 RSS
+button.export=\u042d\u043a\u0441\u043f\u043e\u0440\u0442
 
 label.new-row.title=\u0421\u043e\u0437\u0434\u0430\u0442\u044c \u043d\u043e\u0432\u044b\u0439 \u044d\u043b\u0435\u043c\u0435\u043d\u0442
 
