--- a/OrgStructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/orgstructure.menu.get_ru.properties
+++ b/OrgStructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/orgstructure.menu.get_ru.properties
@@ -1,4 +1,5 @@
 lecm.orgstructure.structure.btn=\u0421\u0442\u0440\u0443\u043A\u0442\u0443\u0440\u0430
-lecm.orgstructure.project_register.btn=\u0420\u0435\u0435\u0441\u0442\u0440 \u043F\u0440\u043E\u0435\u043A\u0442\u043E\u0432
+lecm.orgstructure.work_groups.btn=\u0420\u0430\u0431\u043E\u0447\u0438\u0435 \u0433\u0440\u0443\u043F\u043F\u044B
 lecm.orgstructure.employees.btn=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A\u0438
 lecm.orgstructure.staff_list.btn=\u0428\u0442\u0430\u0442\u043D\u043E\u0435 \u0440\u0430\u0441\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+lecm.orgstructure.roles.btn=\u041F\u0440\u043E\u0435\u043A\u0442\u043D\u044B\u0435 \u0440\u043E\u043B\u0438
