--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/all/datagrid/datagrid.get_ru.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/all/datagrid/datagrid.get_ru.properties
@@ -33,7 +33,7 @@ message.sortdesc=\u041D\u0430\u0436\u043C\u0438\u0442\u0435, \u0447\u0442\u043E\
 ## Actions
 actions.view=\u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440\u0435\u0442\u044C
 actions.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
-actions.export-xml=Export to XML
+actions.export-xml=\u042D\u043A\u0441\u043F\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0432 XML
 actions.duplicate-row=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043A\u043E\u043F\u0438\u044E
 actions.delete-row=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
 actions.version=\u041F\u0440\u0435\u0434\u044B\u0434\u0443\u0449\u0438\u0435 \u0432\u0435\u0440\u0441\u0438\u0438
