--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar.get_ru.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar.get_ru.properties
@@ -1,10 +1,10 @@
 button.new-row=\u041D\u043E\u0432\u044B\u0439 \u044D\u043B\u0435\u043C\u0435\u043D\u0442
 button.print=\u041F\u0435\u0447\u0430\u0442\u044C
 button.rss-feed=\u041B\u0435\u043D\u0442\u0430 RSS
-button.export=\u042D\u043A\u0441\u043F\u043E\u0440\u0442
-button.import=\u0418\u043C\u043F\u043E\u0440\u0442
 button.search=\u041F\u043E\u0438\u0441\u043A
+button.export-xml=\u042d\u043a\u0441\u043f\u043e\u0440\u0442 XML
 button.import-xml=\u0418\u043c\u043f\u043e\u0440\u0442 XML
+button.export-csv=\u042d\u043a\u0441\u043f\u043e\u0440\u0442 CSV
 button.import-csv=\u0418\u043c\u043f\u043e\u0440\u0442 CSV
 
 label.new-row.title=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u044D\u043B\u0435\u043C\u0435\u043D\u0442
