--- a/lecm-delegation/repo/src/main/config/messages/delegation_ru.properties
+++ b/lecm-delegation/repo/src/main/config/messages/delegation_ru.properties
@@ -1,8 +1,22 @@
-lecm-dlg_delegationModel.title=\u0422\u0435\u0441\u0442\u043e\u0432\u0430\u044f \u043c\u043e\u0434\u0435\u043b\u044c \u0434\u0430\u043d\u043d\u044b\u0445 \u0434\u043b\u044f \u043c\u043e\u0434\u0443\u043b\u044f \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f
-lecm-dlg_delegationModel.description=\u042d\u0442\u043e \u0442\u0435\u0441\u0442\u043e\u0432\u0430\u044f \u043c\u043e\u0434\u0435\u043b\u044c \u0434\u0430\u043d\u043d\u044b\u0445 \u0434\u043b\u044f \u043c\u043e\u0434\u0443\u043b\u044f \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f, \u043f\u043e\u043b\u044c\u0437\u044b \u043e\u0442 \u043d\u0435\u0435 \u043d\u0438\u043a\u0430\u043a\u043e\u0439, \u0442\u0430\u043a \u043f\u043e\u0442\u0440\u0435\u043d\u0438\u0440\u043e\u0432\u0430\u0442\u044c\u0441\u044f
-lecm-dlg_delegationModel.type.lecm-dlg_test-unit.title=\u0422\u0435\u0441\u0442\u043e\u0432\u044b\u0439 \u0442\u0438\u043f \u0434\u0430\u043d\u043d\u044b\u0445 \u043e\u043f\u0438\u0441\u0430\u043d\u043d\u044b\u0439 \u0432 \u043c\u043e\u0434\u0435\u043b\u0438 \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f
-lecm-dlg_delegationModel.type.lecm-dlg_test-unit.description=\u0411\u0435\u0441\u0441\u043c\u044b\u0441\u043b\u0435\u043d\u043d\u044b\u0439 \u0438 \u0431\u0435\u0441\u043f\u043e\u0449\u0430\u0434\u043d\u044b\u0439 \u0442\u0435\u0441\u0442\u043e\u0432\u044b\u0439 \u0442\u0438\u043f \u0434\u0430\u043d\u043d\u044b\u0445
-lecm-dlg_delegationModel.property.lecm-dlg_test-unit.id=\u0423\u043d\u0438\u043a\u0430\u043b\u044c\u043d\u044b\u0439 \u0438\u0434\u0435\u043d\u0442\u0438\u0444\u0438\u043a\u0430\u0442\u043e\u0440
-lecm-dlg_delegationModel.property.lecm-dlg_test-unit.name=\u0418\u043c\u044f
-lecm-dlg_delegationModel.property.lecm-dlg_test-unit.title=\u0417\u0430\u0433\u043e\u043b\u043e\u0432\u043e\u043a
-lecm-dlg_delegationModel.property.lecm-dlg_test-unit.date=\u0434\u0430\u0442\u0430/\u0432\u0440\u0435\u043c\u044f
+# <model name="lecm-ba:delegations">
+lecm-ba_delegations.title=\u0411\u0438\u0437\u043d\u0435\u0441 \u043c\u043e\u0434\u0435\u043b\u044c \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f \u043f\u043e\u043b\u043d\u043e\u043c\u043e\u0447\u0438\u0439
+
+# <constraint name="lecm-ba:statusList">
+listconstraint.lecm-ba_statusList.NEW=\u043d\u043e\u0432\u0430\u044f
+listconstraint.lecm-ba_statusList.ACTIVE=\u0434\u0435\u0439\u0441\u0442\u0432\u0443\u044e\u0449\u0430\u044f
+listconstraint.lecm-ba_statusList.REVOKED=\u0430\u043d\u043d\u0443\u043b\u0438\u0440\u043e\u0432\u0430\u043d\u043d\u0430\u044f
+listconstraint.lecm-ba_statusList.CLOSED=\u0437\u0430\u043a\u0440\u044b\u0442\u0430\u044f
+
+# <type name="lecm-ba:procuracy">
+lecm-ba_delegations.type.lecm-ba_procuracy.title=\u0414\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0441\u0442\u044c \u043f\u043e \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044e \u043f\u0440\u0430\u0432
+lecm-ba_delegations.property.lecm-ba_dateUTCBegin.title=\u0414\u0430\u0442\u0430 \u043d\u0430\u0447\u0430\u043b\u0430 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044f
+lecm-ba_delegations.property.lecm-ba_dateUTCEnd.title=\u0414\u0430\u0442\u0430 \u043e\u043a\u043e\u043d\u0447\u0430\u043d\u0438\u044f \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044f
+lecm-ba_delegations.property.lecm-ba_allFunctions.title=\u0412\u0441\u0435 \u0444\u0443\u043d\u043a\u0446\u0438\u0438
+lecm-ba_delegations.property.lecm-ba_comment.title=\u041a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u0439 \u0438 \u0434\u0435\u0442\u0430\u043b\u0438
+lecm-ba_delegations.property.lecm-ba_canpropogate.title=\u0424\u043b\u0430\u0433 \u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e\u0441\u0442\u0438 \u043f\u0435\u0440\u0435\u0434\u0430\u0447\u0438 \u0434\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0441\u0442\u0438
+lecm-ba_delegations.property.lecm-ba_dateUTCRevoke.title=\u0412\u0440\u0435\u043c\u044f \u043f\u0440\u0435\u043a\u0440\u0430\u0449\u0435\u043d\u0438\u044f
+lecm-ba_delegations.property.lecm-ba_status.title=\u0421\u043e\u0441\u0442\u043e\u044f\u043d\u0438\u0435 \u0414\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0441\u0442\u0438
+lecm-ba_delegations.association.lecm-ba_fromEmployee.title=\u0414\u0435\u043b\u0435\u0433\u0438\u0440\u0443\u044e\u0449\u0438\u0439
+lecm-ba_delegations.association.lecm-ba_toEmployee.title=\u0414\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0435 \u043b\u0438\u0446\u043e
+lecm-ba_delegations.association.lecm-ba_delegateRoles.title=\u0421\u043e\u0441\u0442\u0430\u0432 \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u0443\u0435\u043c\u044b\u0445 \u0444\u0443\u043d\u043a\u0446\u0438\u0439
+lecm-ba_delegations.association.lecm-ba_parentProcuracy.title=\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442-\u043e\u0441\u043d\u043e\u0432\u0430\u043d\u0438\u0435
