--- a/lecm-base/share/src/main/java/ru/it/lecm/base-share/form/form_ru.properties
+++ b/lecm-base/share/src/main/java/ru/it/lecm/base-share/form/form_ru.properties
@@ -1,3 +1,4 @@
+logicecm.base.elements-for-select=\u042D\u043B\u0435\u043C\u0435\u043D\u0442\u044B \u0434\u043B\u044F \u0432\u044B\u0431\u043E\u0440\u0430
 logicecm.base.selected-elements=\u0412\u044B\u0431\u0440\u0430\u043D\u043D\u044B\u0435 \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u044B
 logicecm.base.select-tree-element=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u044D\u043B\u0435\u043C\u0435\u043D\u0442 \u0432 \u0434\u0435\u0440\u0435\u0432\u0435
 logicecm.base.create-new-button.label=+
