--- a/lecm-orgstructure/repo/src/main/config/messages/orgstructure_ru.properties
+++ b/lecm-orgstructure/repo/src/main/config/messages/orgstructure_ru.properties
@@ -91,6 +91,10 @@ lecm-orgstr_organizationStructure.association.lecm-orgstr_employee-person-assoc.
 lecm-orgstr_organizationStructure.association.lecm-orgstr_employee-person-assoc.description=\u041B\u043E\u0433\u0438\u043D \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u0441\u0438\u0441\u0442\u0435\u043C\u044B
 lecm-orgstr_organizationStructure.association.lecm-orgstr_employee-person-data-assoc.title=\u041F\u0435\u0440\u0441\u043E\u043D\u0430\u043B\u044C\u043D\u044B\u0435 \u0434\u0430\u043D\u043D\u044B\u0435
 lecm-orgstr_organizationStructure.association.lecm-orgstr_employee-person-data-assoc.description=\u041F\u0435\u0440\u0441\u043E\u043D\u0430\u043B\u044C\u043D\u0443\u044E \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044E
+lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-positions.title=\u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u0438
+lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-positions.description=\u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u0438
+lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-roles.title=\u0420\u043E\u043B\u0438 \u0432 \u0440\u0430\u0431\u043E\u0447\u0438\u0445 \u0433\u0440\u0443\u043F\u043F\u0430\u0445
+lecm-orgstr_organizationStructure.property.lecm-orgstr_employee-roles.description=\u0420\u043E\u043B\u0438 \u0432 \u0440\u0430\u0431\u043E\u0447\u0438\u0445 \u0433\u0440\u0443\u043F\u043F\u0430\u0445
 
 lecm-orgstr_organizationStructure.type.lecm-orgstr_personal-data.title=\u041F\u0435\u0440\u0441\u043E\u043D\u0430\u043B\u044C\u043D\u0430\u044F \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F
 lecm-orgstr_organizationStructure.type.lecm-orgstr_personal-data.description=\u041F\u0435\u0440\u0441\u043E\u043D\u0430\u043B\u044C\u043D\u0430\u044F \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F
@@ -123,6 +127,8 @@ lecm-orgstr_organizationStructure.type.lecm-orgstr_staff-list.title=\u0428\u0442
 lecm-orgstr_organizationStructure.type.lecm-orgstr_staff-list.description=\u0428\u0442\u0430\u0442\u043D\u043E\u0435 \u0440\u0430\u0441\u043F\u0438\u0441\u0430\u043D\u0438\u0435
 lecm-orgstr_organizationStructure.property.lecm-orgstr_staff-list-is-boss.title=\u0420\u0443\u043A\u043E\u0432\u043E\u0434\u044F\u0449\u0430\u044F \u043F\u043E\u0437\u0438\u0446\u0438\u044F
 lecm-orgstr_organizationStructure.property.lecm-orgstr_staff-list-is-boss.description=\u0420\u0443\u043A\u043E\u0432\u043E\u0434\u044F\u0449\u0430\u044F \u043F\u043E\u0437\u0438\u0446\u0438\u044F
+lecm-orgstr_organizationStructure.property.lecm-orgstr_staff-list-description.title=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435(\u0434\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u043D\u044B\u0435 \u043E\u0431\u044F\u0437\u0430\u043D\u043D\u043E\u0441\u0442\u0438)
+lecm-orgstr_organizationStructure.property.lecm-orgstr_staff-list-description.description=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435(\u0434\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u043D\u044B\u0435 \u043E\u0431\u044F\u0437\u0430\u043D\u043D\u043E\u0441\u0442\u0438)
 
 lecm-orgstr_organizationStructure.type.lecm-orgstr_employee-link.title=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
 lecm-orgstr_organizationStructure.type.lecm-orgstr_employee-link.description=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
