--- a/lecm-dictionary-test/repo/src/main/config/messages/dictionary-test_ru.properties
+++ b/lecm-dictionary-test/repo/src/main/config/messages/dictionary-test_ru.properties
@@ -5,3 +5,10 @@ lecm-dic-test_dictionaryTest.association.lecm-dic-test_regOneTree.title=\u0420\u
 lecm-dic-test_dictionaryTest.association.lecm-dic-test_regManyTree.title=\u0420\u0435\u0433\u0438\u043E\u043D\u044B, \u043C\u043D\u043E\u0433\u043E, \u043E\u0442\u0434\u0435\u043B\u044C\u043D\u043E\u0435 \u043E\u043A\u043D\u043E
 lecm-dic-test_dictionaryTest.association.lecm-dic-test_addressOneTree.title=\u0410\u0434\u0440\u0435\u0441, \u043E\u0434\u0438\u043D, \u043E\u0442\u0434\u0435\u043B\u044C\u043D\u043E\u0435 \u043E\u043A\u043D\u043E
 lecm-dic-test_dictionaryTest.association.lecm-dic-test_addressManyTree.title=\u0410\u0434\u0440\u0435\u0441, \u043C\u043D\u043E\u0433\u043E, \u043E\u0442\u0434\u0435\u043B\u044C\u043D\u043E\u0435 \u043E\u043A\u043D\u043E
+
+
+lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test_organization-unit.title=\u0412\u044B\u0431\u043E\u0440 \u043F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u044F
+lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test_position.title=\u0412\u044B\u0431\u043E\u0440 \u0434\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u0435\u0439
+lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test_workGroup.title=\u0412\u044B\u0431\u043E\u0440 \u0440\u0430\u0431\u043E\u0447\u0435\u0439 \u0433\u0440\u0443\u043F\u043F\u044B
+lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test_employee.title=\u0412\u044B\u0431\u043E\u0440 \u0441\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A\u0430
+lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test_workRole.title=\u0412\u044B\u0431\u043E\u0440 \u0440\u043E\u043B\u0435\u0439 \u0432 \u0433\u0440\u0443\u043F\u043F\u0435
