--- a/lecm-base/repo/src/main/config/messages/lecm-statemachine_ru.properties
+++ b/lecm-base/repo/src/main/config/messages/lecm-statemachine_ru.properties
@@ -7,6 +7,7 @@ listconstraint.lecm-statemachine_statuses.ON_SIGNING=\u041D\u0430 \u043F\u043E\u
 listconstraint.lecm-statemachine_statuses.CANCELED=\u041E\u0442\u043C\u0435\u043D\u0435\u043D
 listconstraint.lecm-statemachine_statuses.SIGNED=\u041F\u043E\u0434\u043F\u0438\u0441\u0430\u043D
 statemachine.action.StatusChange=\u0421\u043C\u0435\u043D\u0430 \u0441\u0442\u0430\u0442\u0443\u0441\u0430
-statemachine.action.FinishStateWithTransition=\u0412\u044B\u0445\u043E\u0434 \u0438\u0437 \u0441\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u044F \u0441 \u043F\u0435\u0440\u0435\u0445\u043E\u0434\u043E\u043C
+statemachine.action.FinishStateWithTransition=\u041F\u0435\u0440\u0435\u0445\u043E\u0434 \u0441 \u0437\u0430\u043F\u0443\u0441\u043A\u043E\u043C \u0438\u043B\u0438 \u0431\u0435\u0437 \u0437\u0430\u043F\u0443\u0441\u043A\u0430 \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u0430
 statemachine.action.StartWorkflow=\u0417\u0430\u043F\u0443\u0441\u043A \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u0430
 statemachine.action.WaitForDocumentChange=\u041E\u0436\u0438\u0434\u0430\u043D\u0438\u0435 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+statemachine.action.UserWorkflow=\u0417\u0430\u043F\u0443\u0441\u043A \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u0430
