--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form_ru.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form_ru.properties
@@ -10,3 +10,6 @@ page.orgstructure.filter.label=(\u0441\u043E\u0434\u0435\u0440\u0436\u0438\u043C
 search-block=\u041F\u043E\u0438\u0441\u043A
 
 dialog.edit.title=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
+
+info.main=\u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F
+info.more=\u041F\u0440\u043E\u0447\u0435\u0435
