--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
@@ -1,2 +1,19 @@
 lecm-stmeditor_model.association.lecm-stmeditor_transitionStatus.title=\u0421\u0442\u0430\u0442\u0443\u0441
 lecm-stmeditor_model.property.lecm-stmeditor_transitionExpression.title=\u0412\u044B\u0440\u0430\u0436\u0435\u043D\u0438\u0435
+lecm-stmeditor_model.property.lecm-stmeditor_userTransitionLabel.title=\u0418\u043C\u044F \u043F\u0435\u0440\u0435\u0445\u043E\u0434\u0430
+lecm-stmeditor_model.property.lecm-stmeditor_userTransitionLabel.description=\u0418\u043C\u044F \u043F\u0435\u0440\u0435\u0445\u043E\u0434\u0430
+lecm-stmeditor_model.property.lecm-stmeditor_transitionWorkflowLabel.title=\u0418\u043C\u044F \u043F\u0435\u0440\u0435\u0445\u043E\u0434\u0430
+
+lecm-stmeditor_model.property.lecm-stmeditor_inputWorkflowToVariable.title=\u041F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u0430\u044F
+lecm-stmeditor_model.property.lecm-stmeditor_inputWorkflowVariableType.title=\u0422\u0438\u043F \u043F\u0435\u0440\u0435\u0434\u0430\u0447\u0438
+lecm-stmeditor_model.property.lecm-stmeditor_inputWorkflowVariableValue.title=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
+lecm-stmeditor_model.property.lecm-stmeditor_outputWorkflowToVariable.title=\u041F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u0430\u044F
+lecm-stmeditor_model.property.lecm-stmeditor_outputWorkflowVariableType.title=\u0422\u0438\u043F \u043F\u0435\u0440\u0435\u0434\u0430\u0447\u0438
+lecm-stmeditor_model.property.lecm-stmeditor_outputWorkflowVariableValue.title=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
+
+listconstraint.lecm-stmeditor_variableSettingType.VARIABLE=\u041F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u0430\u044F
+listconstraint.lecm-stmeditor_variableSettingType.VALUE=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
+lecm-stmeditor_model.property.lecm-stmeditor_transitionWorkflowId.title=\u041F\u0440\u043E\u0446\u0435\u0441\u0441
+lecm-stmeditor_model.property.lecm-stmeditor_workflowId.title=ID \u041F\u0440\u043E\u0446\u0435\u0441\u0441\u0430
+lecm-stmeditor_model.property.lecm-stmeditor_workflowLabel.title=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
+lecm-stmeditor_model.property.lecm-stmeditor_assignee.title=\u041D\u0430\u0437\u043D\u0430\u0447\u0435\u043D
