[+] ALF-184. Формы настройки действий – доработка и переработка
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@597 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
@@ -17,3 +17,4 @@ lecm-stmeditor_model.property.lecm-stmeditor_transitionWorkflowId.title=\u041F\u
 lecm-stmeditor_model.property.lecm-stmeditor_workflowId.title=ID \u041F\u0440\u043E\u0446\u0435\u0441\u0441\u0430
 lecm-stmeditor_model.property.lecm-stmeditor_workflowLabel.title=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
 lecm-stmeditor_model.property.lecm-stmeditor_assignee.title=\u041D\u0430\u0437\u043D\u0430\u0447\u0435\u043D
+lecm-stmeditor_model.property.lecm-stmeditor_startStatus.title=\u041D\u0430\u0447\u0430\u043B\u044C\u043D\u044B\u0439 \u0441\u0442\u0430\u0442\u0443\u0441
