--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form_ru.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form_ru.properties
@@ -16,6 +16,8 @@ info.main=\u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F
 info.more=\u041F\u0440\u043E\u0447\u0435\u0435
 info.common-info=\u041E\u0441\u043D\u043E\u0432\u043D\u044B\u0435 \u0441\u0432\u0435\u0434\u0435\u043D\u0438\u044F
 info.personal-info=\u041F\u0435\u0440\u0441\u043E\u043D\u0430\u043B\u044C\u043D\u0430\u044F \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F
+info.personal-positions=\u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u0438
+info.personal-groups=\u0420\u0430\u0431\u043E\u0447\u0438\u0435 \u0433\u0440\u0443\u043F\u043F\u044B
 
 message.employee.add.success=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A \u043D\u0430\u0437\u043D\u0430\u0447\u0435\u043D
 message.employee.add.failure=\u041F\u0440\u0438 \u043D\u0430\u0437\u043D\u0430\u0447\u0435\u043D\u0438\u0438 \u0441\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A\u0430 \u043F\u0440\u043E\u0438\u0437\u043E\u0448\u043B\u0430 \u043E\u0448\u0438\u0431\u043A\u0430
@@ -38,3 +40,5 @@ message.employee.role.delete.prompt=\u0412\u044B \u0443\u0432\u0435\u0440\u0435\
 
 lecm-orgstr_employee-main-unit=\u041E\u0442\u0434\u0435\u043B
 lecm-orgstr_employee-main-position=\u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u044C
+lecm-orgstr_workforce-group=\u0413\u0440\u0443\u043F\u043F\u0430
+lecm-orgstr_staff-unit=\u041E\u0442\u0434\u0435\u043B
