Добавлены ссылки на ассоциации в datagrid-ах оргструктуры
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@674 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form_ru.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form_ru.properties
@@ -42,3 +42,5 @@ lecm-orgstr_employee-main-unit=\u041E\u0442\u0434\u0435\u043B
 lecm-orgstr_employee-main-position=\u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u044C
 lecm-orgstr_workforce-group=\u0413\u0440\u0443\u043F\u043F\u0430
 lecm-orgstr_staff-unit=\u041E\u0442\u0434\u0435\u043B
+lecm-orgstr_boss=\u0420\u0443\u043A\u043E\u0432\u043E\u0434\u0438\u0442\u0435\u043B\u044C
+lecm-orgstr_employee=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
