--- a/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor_ru.properties
+++ b/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor_ru.properties
@@ -11,3 +11,10 @@ statemachine.editor.form.label.inputWorkflowData=\u0412\u0445\u043E\u0434\u043D\
 statemachine.editor.form.label.outputWorkflowData=\u0412\u044B\u0445\u043E\u0434\u043D\u044B\u0435 \u0434\u0430\u043D\u043D\u044B\u0435
 statemachine.editor.form.label.workflows=\u041F\u0440\u043E\u0446\u0435\u0441\u0441\u044B
 statemachine.editor.form.label.expressions=\u0412\u044B\u0440\u0430\u0436\u0435\u043D\u0438\u044F
+statemachine.editor.form.info=\u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F
+statemachine.editor.form.behavior=\u041F\u043E\u0432\u0435\u0434\u0435\u043D\u0438\u0435
+statemachine.editor.form.actions=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
+statemachine.editor.form.events=\u041E\u0431\u0440\u0430\u0431\u043E\u0442\u0447\u0438\u043A\u0438 \u0441\u043E\u0431\u044B\u0442\u0438\u0439
+lecm-stmeditor_statusTransitionType=\u0422\u0438\u043F \u043F\u0435\u0440\u0435\u0445\u043E\u0434\u0430
+lecm-stmeditor_statusExpression=\u0423\u0441\u043B\u043E\u0432\u0438\u0435
+lecm-stmeditor_statusTarget=\u0421\u0442\u0430\u0442\u0443\u0441
