--- a/lecm-dictionary/share/src/main/java/ru/it/lecm/dictionary/form/form_ru.properties
+++ b/lecm-dictionary/share/src/main/java/ru/it/lecm/dictionary/form/form_ru.properties
@@ -1,2 +1,5 @@
 logicecm.orgstructure.employee.workplace=??????? ?????
 logicecm.orgstructure.employee.person=???????
+
+header.dictionary.label=\u0421\u043F\u0440\u0430\u0432\u043E\u0447\u043D\u0438\u043A
+header.dictionary.description=\u0421\u043F\u0440\u0430\u0432\u043E\u0447\u043D\u0438\u043A
