Название модуля "Оргструктура"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@779 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form_ru.properties
+++ b/lecm-orgstructure/share/src/main/java/ru/it/lecm/orgstructure/form/form_ru.properties
@@ -1,4 +1,4 @@
-header.orgstructure.label=\u041F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u044F
+header.orgstructure.label=\u041E\u0440\u0433\u0441\u0442\u0440\u0443\u043A\u0442\u0443\u0440\u0430
 header.orgstructure.description=\u041F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u044F
 
 page.orgstructure=\u041F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u044F
