[~] более правильное сообщение при сохранении [~] перевод для поля Тип документа [~] для Должностей убраны поля Имя в РП и Имя в ДП из датагрида
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@781 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/repo/src/main/config/messages/orgstructure_ru.properties
+++ b/lecm-orgstructure/repo/src/main/config/messages/orgstructure_ru.properties
@@ -112,6 +112,8 @@ lecm-orgstr_organizationStructure.property.lecm-orgstr_person-data-doc-series.ti
 lecm-orgstr_organizationStructure.property.lecm-orgstr_person-data-doc-series.description=\u0421\u0435\u0440\u0438\u044F \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 lecm-orgstr_organizationStructure.property.lecm-orgstr_person-data-doc-number.title=\u041D\u043E\u043C\u0435\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 lecm-orgstr_organizationStructure.property.lecm-orgstr_person-data-doc-number.description=\u041D\u043E\u043C\u0435\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+lecm-orgstr_organizationStructure.association.lecm-orgstr_person-data-docType-assoc.title=\u0422\u0438\u043F \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+lecm-orgstr_organizationStructure.association.lecm-orgstr_person-data-docType-assoc.description=\u0422\u0438\u043F \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 
 lecm-orgstr_organizationStructure.type.lecm-orgstr_workGroup.title=\u0420\u0430\u0431\u043E\u0447\u0430\u044F \u0433\u0440\u0443\u043F\u043F\u0430
 lecm-orgstr_organizationStructure.type.lecm-orgstr_workGroup.description=\u0420\u0430\u0431\u043E\u0447\u0430\u044F \u0433\u0440\u0443\u043F\u043F\u0430
