--- a/lecm-dictionary/repo/src/main/config/messages/dictionary_ru.properties
+++ b/lecm-dictionary/repo/src/main/config/messages/dictionary_ru.properties
@@ -2,3 +2,5 @@ lecm-dic_dictionaryStructure.type.lecm-dic_dictionary.title=\u0421\u043F\u0440\u
 lecm-dic_dictionaryStructure.type.lecm-dic_dictionary.description=\u0421\u043F\u0440\u0430\u0432\u043E\u0447\u043D\u0438\u043A
 lecm-dic_dictionaryStructure.property.lecm-dic_description.title=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
 lecm-dic_dictionaryStructure.property.lecm-dic_description.description=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+lecm-dic_dictionaryStructure.property.lecm-dic_active.title=\u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0439
+lecm-dic_dictionaryStructure.property.lecm-dic_active.description=\u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0439
