ALF-277 - название колонки
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@815 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/repo/src/main/config/messages/orgstructure_ru.properties
+++ b/lecm-orgstructure/repo/src/main/config/messages/orgstructure_ru.properties
@@ -13,8 +13,8 @@ lecm-orgstr_organizationStructure.property.lecm-orgstr_element-short-name.descri
 
 lecm-orgstr_organizationStructure.type.lecm-orgstr_organization-element-member.title=\u041F\u043E\u0437\u0438\u0446\u0438\u044F \u0432 \u0441\u0442\u0440\u0443\u043A\u0442\u0443\u0440\u0435
 lecm-orgstr_organizationStructure.type.lecm-orgstr_organization-element-member.description=\u041F\u043E\u0437\u0438\u0446\u0438\u044F \u0432 \u0441\u0442\u0440\u0443\u043A\u0442\u0443\u0440\u0435
-lecm-orgstr_organizationStructure.association.lecm-orgstr_element-member-position-assoc.title=\u041F\u043E\u0437\u0438\u0446\u0438\u044F
-lecm-orgstr_organizationStructure.association.lecm-orgstr_element-member-position-assoc.description=\u041F\u043E\u0437\u0438\u0446\u0438\u044F
+lecm-orgstr_organizationStructure.association.lecm-orgstr_element-member-position-assoc.title=\u0420\u043E\u043B\u044C
+lecm-orgstr_organizationStructure.association.lecm-orgstr_element-member-position-assoc.description=\u0420\u043E\u043B\u044C
 lecm-orgstr_organizationStructure.association.lecm-orgstr_element-member-employee-assoc.title=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
 lecm-orgstr_organizationStructure.association.lecm-orgstr_element-member-employee-assoc.description=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
 
