--- a/lecm-subscriptions/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/subscriptions/subscriptions.menu.get_ru.properties
+++ b/lecm-subscriptions/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/subscriptions/subscriptions.menu.get_ru.properties
@@ -1,2 +1,2 @@
 lecm.subscriptions.object.btn=\u041F\u043E\u0434\u043F\u0438\u0441\u043A\u0430 \u043E\u0431\u044A\u0435\u043A\u0442\u0430
-lecm.subscriptions.type.btn=\u041F\u043E\u0434\u043F\u0438\u0441\u043A\u0430 \u0442\u0438\u043F\u0430
+lecm.subscriptions.type.btn=\u041F\u043E\u0434\u043F\u0438\u0441\u043A\u0430 \u043D\u0430 \u0442\u0438\u043F \u043E\u0431\u044A\u0435\u043A\u0442\u0430
