[+] последовательности для выбора пользователя при запуске процессов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@905 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
@@ -14,7 +14,7 @@ listconstraint.lecm-stmeditor_variableSettingType.VALUE=\u0417\u043D\u0430\u0447
 lecm-stmeditor_model.property.lecm-stmeditor_transitionWorkflowId.title=\u041F\u0440\u043E\u0446\u0435\u0441\u0441
 lecm-stmeditor_model.property.lecm-stmeditor_workflowId.title=ID \u041F\u0440\u043E\u0446\u0435\u0441\u0441\u0430
 lecm-stmeditor_model.property.lecm-stmeditor_workflowLabel.title=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
-lecm-stmeditor_model.association.lecm-stmeditor_assignee.title=\u041D\u0430\u0437\u043D\u0430\u0447\u0435\u043D
+lecm-stmeditor_model.property.lecm-stmeditor_assignee.title=\u041D\u0430\u0437\u043D\u0430\u0447\u0435\u043D
 lecm-stmeditor_model.property.lecm-stmeditor_startStatus.title=\u041D\u0430\u0447\u0430\u043B\u044C\u043D\u044B\u0439 \u0441\u0442\u0430\u0442\u0443\u0441
 lecm-stmeditor_model.property.lecm-stmeditor_takeFinishStateWithTransitionUser.title=\u041F\u0435\u0440\u0435\u0445\u043E\u0434\u044B \u0432 \u0441\u0442\u0430\u0442\u0443\u0441
 lecm-stmeditor_model.property.lecm-stmeditor_takeFinishStateWithTransitionWorkflow.title=\u0417\u0430\u043F\u0443\u0441\u043A \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u0430 \u0441 \u043F\u0435\u0440\u0435\u0445\u043E\u0434\u043E\u043C \u0432 \u0441\u0442\u0430\u0442\u0443\u0441
