ALF-300 3.3.4 Просмотр истории действий с документом из карточки документа
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1085 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/repo/src/main/config/messages/business-journal_ru.properties
+++ b/lecm-business-journal/repo/src/main/config/messages/business-journal_ru.properties
@@ -61,3 +61,6 @@ lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-second
 lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-secondaryObj4-associption=\u041E\u0431\u044A\u0435\u043A\u0442 4
 lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-secondaryObj5-assoc.title=\u041E\u0431\u044A\u0435\u043A\u0442 5
 lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-secondaryObj5-associption=\u041E\u0431\u044A\u0435\u043A\u0442 5
+
+lecm-busjournal-aspects_businessJournalAspectsModel.property.lecm-busjournal-aspects_history-list.title=\u0418\u0441\u0442\u043E\u0440\u0438\u044F
+lecm-busjournal-aspects_businessJournalAspectsModel.property.lecm-busjournal-aspects_history-list.description=\u0418\u0441\u0442\u043E\u0440\u0438\u044F
