[~] сохранение ссылок в записи БЖ [~] вывод ссылок
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1086 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/repo/src/main/config/messages/business-journal_ru.properties
+++ b/lecm-business-journal/repo/src/main/config/messages/business-journal_ru.properties
@@ -35,14 +35,14 @@ lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-initiator
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-inititator.description=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj1.description=\u041E\u0431\u044A\u0435\u043A\u0442 1
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj1.title=\u041E\u0431\u044A\u0435\u043A\u0442 1
-lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj2.description=\u041E\u0431\u044A\u0435\u043A\u0442
-lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj2.title=\u041E\u0431\u044A\u0435\u043A\u0442
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj2.description=\u041E\u0431\u044A\u0435\u043A\u0442 2
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj2.title=\u041E\u0431\u044A\u0435\u043A\u0442 2
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj3.description=\u041E\u0431\u044A\u0435\u043A\u0442
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj3.title=\u041E\u0431\u044A\u0435\u043A\u0442 3
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj4.description=\u041E\u0431\u044A\u0435\u043A\u0442
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj4.title=\u041E\u0431\u044A\u0435\u043A\u0442 4
-lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj5.description=\u041E\u0431\u044A\u0435\u043A\u0442
-lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj5.title=\u041E\u0431\u044A\u0435\u043A\u0442
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj5.description=\u041E\u0431\u044A\u0435\u043A\u0442 5
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj5.title=\u041E\u0431\u044A\u0435\u043A\u0442 5
 lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-initiator-assoc.title=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
 lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-initiator-assoc.description=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
 lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-mainObject-assoc.title=\u041E\u0441\u043D\u043E\u0432\u043D\u043E\u0439 \u043E\u0431\u044A\u0435\u043A\u0442
