1) Реализовано добавление особого расписания (пока без красивого контрола выбора правил повторяемости). 2) Избавился ото всех *.head.ftl виду того, что в версии 4.2 разработчики рекомендуют от них избавляться и вообще они в некоторых условиях могут вызывать ошибки в некоторых браузерах. 3) Косметитеские правки интерфейса: причесаны метки для кнопок, заголовки страниц, поля в формах сгруппированы. 4) Запрещен множественный сотрудников/огр. единиц выбор в контроле при создании нового расписания.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1102 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/repo/src/main/config/messages/calendar_ru.properties
+++ b/lecm-calendar/repo/src/main/config/messages/calendar_ru.properties
@@ -46,8 +46,8 @@ lecm-shed_shedule-model.type.lecm-shed_shedule.title=\u0413\u0440\u0430\u0444\u0
 #<property name="lecm-shed:type">
 lecm-shed_shedule-model.property.lecm-shed_type.title=\u0422\u0438\u043f \u0433\u0440\u0430\u0444\u0438\u043a\u0430
 #<constraint name="lecm-shed:shedule-types-constraint" type="LIST">
-listconstraint.lecm-shed_shedule-types-constraint.COMMON=\u041e\u0431\u044b\u0447\u043d\u044b\u0439 \u0433\u0440\u0430\u0444\u0438\u043a
-listconstraint.lecm-shed_shedule-types-constraint.SPECIAL=\u041e\u0441\u043e\u0431\u044b\u0439 \u0433\u0440\u0430\u0444\u0438\u043a
+listconstraint.lecm-shed_shedule-types-constraint.COMMON=\u041e\u0431\u044b\u0447\u043d\u044b\u0439
+listconstraint.lecm-shed_shedule-types-constraint.SPECIAL=\u041e\u0441\u043e\u0431\u044b\u0439
 #<property name="lecm-shed:std-begin">
 lecm-shed_shedule-model.property.lecm-shed_std-begin.title=\u041d\u0430\u0447\u0430\u043b\u043e \u0440\u0430\u0431\u043e\u0442\u044b
 #<property name="lecm-shed:std-end">
