ALF-316: Во всплывающем окне добавлена кнопка "ещё"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1108 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-notifications-active-channel/share/src/main/java/ru/it/lecm/notifications/notifications_ru.properties
+++ b/lecm-notifications-active-channel/share/src/main/java/ru/it/lecm/notifications/notifications_ru.properties
@@ -3,3 +3,4 @@ header.notifications.description=\u0423\u0432\u0435\u0434\u043E\u043C\u043B\u043
 
 notifications=\u0423\u0432\u0435\u0434\u043E\u043C\u043B\u0435\u043D\u0438\u044F
 notifications.button.close=\u0417\u0430\u043A\u0440\u044B\u0442\u044C
+notifications.link.more=\u0415\u0449\u0451
