1) Добавлен модуль lecm-user-profile со страницей для личных настроек: параметров делегирования и планирования отсутствия. 2) В правое верхее выпадающее меню добавлен пункт "Профиль пользователя", ведущий к модулю lecm-user-profile. 3) Из того же меню удален пункт "Мои делегирования". 4) lecm-calendar переименовал в соответствии с остальными модулями.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1172 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form_ru.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form_ru.properties
@@ -48,3 +48,7 @@ label.shedule.form.month-days=\u0414\u043d\u0438 \u043c\u0435\u0441\u044f\u0446\
 label.shedule.form.shift-work.working-days=\u0420\u0430\u0431\u043e\u0447\u0438\u0445 \u0434\u043d\u0435\u0439
 label.shedule.form.shift-work.non-working-days=\u0412\u044b\u0445\u043e\u0434\u043d\u044b\u0445 \u0434\u043d\u0435\u0439
 label.shedule.form.reiteration-rules=\u041f\u0440\u0430\u0432\u0438\u043b\u0430 \u043f\u043e\u0432\u0442\u043e\u0440\u0435\u043d\u0438\u044f
+
+label.wcalendar.menu.calendar.btn=\u041f\u0440\u043e\u0438\u0437\u0432\u043e\u0434\u0441\u0442\u0432\u0435\u043d\u043d\u044b\u0439 \u043a\u0430\u043b\u0435\u043d\u0434\u0430\u0440\u044c
+label.wcalendar.menu.shedule.btn=\u0413\u0440\u0430\u0444\u0438\u043a \u0440\u0430\u0431\u043e\u0442\u044b
+label.wcalendar.menu.absence.btn=\u041e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0438\u0435 \u0441\u043e\u0442\u0440\u0443\u0434\u043d\u0438\u043a\u043e\u0432
