1) В "Мой профиль" добавлена кнопка и страница "Меня нет в офисе". 2) Пункт "Меня нет в офисе" в выпадающем верхнем меню теперь ведет себя так: если есть возможность создать всплывающее окно-форму (подгружены все необходимые скрипты), то создаем его. В противном случае (находимся на дашборде, служебных страницах и пр.) - переход на страницу "Мой профиль > Меня нет в офисе".
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1359 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-user-profile/share/src/main/java/ru/it/lecm/user-profile/form/form_ru.properties
+++ b/lecm-user-profile/share/src/main/java/ru/it/lecm/user-profile/form/form_ru.properties
@@ -6,3 +6,4 @@ label.user-profile.menu.delegation.btn=\u0423\u043f\u0440\u0430\u0432\u043b\u043
 header.user-profile.label=\u041b\u043e\u0433\u0438\u043a\u0430 ECM: \u041c\u043e\u0439 \u043f\u0440\u043e\u0444\u0438\u043b\u044c
 header.user-profile.description=\u0423\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u0438\u0435 \u043b\u0438\u0447\u043d\u044b\u043c\u0438 \u043d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0430\u043c\u0438
 page.user-profile.delegation.title=\u041c\u043e\u0439 \u043f\u0440\u043e\u0444\u0438\u043b\u044c > \u0414\u0435\u043b\u0435\u0433\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435
+page.user-profile.instant-absence.title=\u041c\u043e\u0439 \u043f\u0440\u043e\u0444\u0438\u043b\u044c > \u041c\u0435\u043d\u044f \u043d\u0435\u0442 \u0432 \u043e\u0444\u0438\u0441\u0435
