ALF-487:  Карточка контента
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1543 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/java/ru/it/lecm/documents/form_ru.properties
+++ b/lecm-documents/share/src/main/java/ru/it/lecm/documents/form_ru.properties
@@ -1,6 +1,11 @@
 page.lecm.document.title=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442
 page.lecm.document.description=\u041E\u0441\u043D\u043E\u0432\u043D\u044B\u0435 \u0441\u0432\u0435\u0434\u0435\u043D\u0438\u044F
 
+page.lecm.document.attachment.title=\u0412\u043B\u043E\u0436\u0435\u043D\u0438\u0435
+page.lecm.document.attachment.description=\u041E\u0441\u043D\u043E\u0432\u043D\u044B\u0435 \u0441\u0432\u0435\u0434\u0435\u043D\u0438\u044F
+
+title.documents=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B
+
 info.connections=\u0421\u0432\u044F\u0437\u0438
 button.connection.add=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0441\u0432\u044F\u0437\u0438
 label.connected.documents=\u0421\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B
