ALF-473  Участники документа (правая область) ALF-479 Просмотр участников документа (главная область) ALF-516 Добавление участника документа (API)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1561 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/java/ru/it/lecm/documents/form_ru.properties
+++ b/lecm-documents/share/src/main/java/ru/it/lecm/documents/form_ru.properties
@@ -16,3 +16,14 @@ message.connection.add.failure=\u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440
 
 connection.types.show.all=\u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0432\u0441\u0435
 label.connection.add.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0441\u0432\u044F\u0437\u0438
+
+button.member.add=\u041F\u0440\u0438\u0433\u043B\u0430\u0441\u0438\u0442\u044C
+label.document.members=\u0423\u0447\u0430\u0441\u0442\u043D\u0438\u043A\u0438
+message.member.add.success=\u0423\u0447\u0430\u0441\u0442\u043D\u0438\u043A \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u0434\u043E\u0431\u0430\u0432\u043B\u0435\u043D
+message.member.add.failure=\u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0434\u043E\u0431\u0430\u0432\u043B\u0435\u043D\u0438\u0438 \u0443\u0447\u0430\u0441\u0442\u043D\u0438\u043A\u0430
+
+label.member.add.title=\u0414\u043E\u0431\u0430\u0432\u043B\u0435\u043D\u0438\u0435 \u0443\u0447\u0430\u0441\u0442\u043D\u0438\u043A\u0430
+
+lecm-doc-members_member-fio=\u0424\u0418\u041E
+lecm-doc-members_member-unit=\u041F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u0435
+lecm-doc-members_member-position=\u041F\u043E\u0437\u0438\u0446\u0438\u044F
