--- a/lecm-documents/repo/src/main/config/messages/lecm-documents_ru.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-documents_ru.properties
@@ -12,3 +12,10 @@ lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_prima
 lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_connected-document-type.title=\u0422\u0438\u043F \u0441\u0432\u044F\u0437\u0430\u043D\u043D\u043E\u0433\u043E \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 lecm-connect-types_dictionary-connection-types.association.lecm-connect-types_available-connection-types-assoc.title=\u0414\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0435 \u0442\u0438\u043F\u044B \u0441\u0432\u044F\u0437\u0438
 lecm-connect-types_dictionary-connection-types.association.lecm-connect-types_default-connection-type-assoc.title=\u0422\u0438\u043F \u0441\u0432\u044F\u0437\u0438 \u043F\u043E \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E
+
+lecm-doc-members_model.type.lecm-doc-members_member.title=\u0423\u0447\u0430\u0441\u0442\u043D\u0438\u043A
+lecm-doc-members_model.type.lecm-doc-members_member.description=\u0423\u0447\u0430\u0441\u0442\u043D\u0438\u043A
+lecm-doc-members_model.property.lecm-doc-members_group.title=\u041F\u0440\u0438\u0432\u0438\u043B\u0435\u0433\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u0430\u044F \u0433\u0440\u0443\u043F\u043F\u0430
+lecm-doc-members_model.property.lecm-doc-members_group.description=\u041F\u0440\u0438\u0432\u0438\u043B\u0435\u0433\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u0430\u044F \u0433\u0440\u0443\u043F\u043F\u0430
+lecm-doc-members_model.association.lecm-doc-members_employee-assoc.title=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
+lecm-doc-members_model.association.lecm-doc-members_employee-assoc.description=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
