ALF-501: Ratings + переводы для полей в "Основных сведениях"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1635 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine/repo/src/main/config/messages/lecm-statemachine_ru.properties
+++ b/lecm-statemachine/repo/src/main/config/messages/lecm-statemachine_ru.properties
@@ -16,3 +16,6 @@ WORKFLOWTASKSTATE_NA=NA
 WORKFLOWTASKSTATE_NEW=\u041D\u041E\u0412\u0410\u042F
 WORKFLOWTASKSTATE_OVERDUE=\u041F\u0420\u041E\u0421\u0420\u041E\u0427\u0415\u041D\u041E
 WORKFLOWTASKSTATE_SOON=\u0421\u041A\u041E\u0420\u041E
+
+lecm-statemachine_model.property.lecm-statemachine_status.title=\u0421\u0442\u0430\u0442\u0443\u0441
+lecm-statemachine_model.property.lecm-statemachine_status.description=\u0421\u0442\u0430\u0442\u0443\u0441
