ALF-484 5.6 Задачи (главная область)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1676 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine/repo/src/main/config/messages/lecm-statemachine_ru.properties
+++ b/lecm-statemachine/repo/src/main/config/messages/lecm-statemachine_ru.properties
@@ -12,10 +12,20 @@ statemachine.action.StartWorkflow=\u0417\u0430\u043F\u0443\u0441\u043A \u043F\u0
 statemachine.action.WaitForDocumentChange=\u041E\u0436\u0438\u0434\u0430\u043D\u0438\u0435 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 statemachine.action.UserWorkflow=\u041F\u0440\u043E\u0446\u0435\u0441\u0441\u044B \u0437\u0430\u043F\u0443\u0441\u043A\u0430\u0435\u043C\u044B\u0435 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u043C
 statemachine.action.TransitionAction=\u0423\u0441\u043B\u043E\u0432\u043D\u044B\u0439 \u043F\u0435\u0440\u0435\u0445\u043E\u0434
-WORKFLOWTASKSTATE_NA=NA
-WORKFLOWTASKSTATE_NEW=\u041D\u041E\u0412\u0410\u042F
-WORKFLOWTASKSTATE_OVERDUE=\u041F\u0420\u041E\u0421\u0420\u041E\u0427\u0415\u041D\u041E
-WORKFLOWTASKSTATE_SOON=\u0421\u041A\u041E\u0420\u041E
 
 lecm-statemachine_model.property.lecm-statemachine_status.title=\u0421\u0442\u0430\u0442\u0443\u0441
 lecm-statemachine_model.property.lecm-statemachine_status.description=\u0421\u0442\u0430\u0442\u0443\u0441
+
+WORKFLOWTASKTYPE_NA=NA
+WORKFLOWTASKTYPE_OVERDUE=\u041F\u0420\u041E\u0421\u0420\u041E\u0427\u0415\u041D\u041E
+WORKFLOWTASKTYPE_SOON=\u0421\u041A\u041E\u0420\u041E
+
+WORKFLOWTASKPRIORITY_HIGH=\u0412\u044B\u0441\u043E\u043A\u0438\u0439 \u043F\u0440\u0438\u043E\u0440\u0438\u0442\u0435\u0442
+WORKFLOWTASKPRIORITY_MEDIUM=\u0421\u0440\u0435\u0434\u043D\u0438\u0439 \u043F\u0440\u0438\u043E\u0440\u0438\u0442\u0435\u0442
+WORKFLOWTASKPRIORITY_LOW=\u041D\u0438\u0437\u043A\u0438\u0439 \u043F\u0440\u0438\u043E\u0440\u0438\u0442\u0435\u0442
+
+workflowStatus.Not\ Yet\ Started=\u0435\u0449\u0435 \u043D\u0435 \u043D\u0430\u0447\u0430\u0442\u043E
+workflowStatus.In\ Progress=\u0432 \u0440\u0430\u0431\u043E\u0442\u0435
+workflowStatus.On\ Hold=\u0437\u0430\u043C\u043E\u0440\u043E\u0436\u0435\u043D\u043E
+workflowStatus.Cancelled=\u043E\u0442\u043C\u0435\u043D\u0435\u043D\u043E
+workflowStatus.Completed=\u0432\u044B\u043F\u043E\u043B\u043D\u0435\u043D\u043E
