На страницу "Рабочий календарь > Отсутствие" добавлена галочка, позволяющая видеть только активные отсутствия. В датагрид на той же странице добавлена колонка "Активное", показывающая, активно ли отсутствие в данный момент.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2026 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/repo/src/main/config/messages/calendar_ru.properties
+++ b/lecm-calendar/repo/src/main/config/messages/calendar_ru.properties
@@ -23,6 +23,8 @@ lecm-absence_absence-model.property.lecm-absence_begin.title=\u041d\u0430\u0447\
 lecm-absence_absence-model.property.lecm-absence_end.title=\u041a\u043e\u043d\u0435\u0446 \u043e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0438\u044f
 #<property name="lecm-absence:unlimited">
 lecm-absence_absence-model.property.lecm-absence_unlimited.title=\u0411\u0435\u0441\u0441\u0440\u043e\u0447\u043d\u043e\u0435 \u043e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0438\u0435
+#<property name="lecm-absence:activated">
+lecm-absence_absence-model.property.lecm-absence_activated.title=\u0410\u043a\u0442\u0438\u0432\u043d\u043e\u0435
 #<property name="lecm-absence:comment">
 lecm-absence_absence-model.property.lecm-absence_comment.title=\u041a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u0439
 # <association name="lecm-absence:abscent-employee-assoc">
