Заготовки для AРM "Договорной деятельности"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2050 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/menu/contracts.menu.get_ru.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/menu/contracts.menu.get_ru.properties
@@ -1,2 +1,4 @@
-lecm.contracts.contracts.btn=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430
-lecm.contracts.documents.btn=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B
+lecm.contracts.main.btn=\u0413\u043B\u0430\u0432\u043D\u0430\u044F
+lecm.contracts.list.btn=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+lecm.contracts.documents.btn=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B \u043A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430\u043C
+lecm.contracts.reports.btn=\u041E\u0442\u0447\u0435\u0442\u044B
