--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts_ru.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts_ru.properties
@@ -2,3 +2,14 @@ page.contracts.title=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 page.contracts.filter.label=(\u0441\u043E\u0434\u0435\u0440\u0436\u0438\u043C\u043E\u0435 \u043E\u0442\u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u043D\u043E)
 header.contracts.label=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 header.contracts.description=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+
+page.contracts-main=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 -> \u0413\u043B\u0430\u0432\u043D\u0430\u044F
+
+page.contracts=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 -> \u0421\u043F\u0438\u0441\u043E\u043A
+page.contracts.filter=(\u043E\u0442\u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u043D\u043E)
+
+page.contracts-documents=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 -> \u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B
+page.contracts-documents.filter=(\u043E\u0442\u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u043D\u043E)
+
+page.contracts-reports=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 -> \u041E\u0442\u0447\u0435\u0442\u044B
+
