[~]Подправлена модель [~]Подправлены переводы [~]Добавлен стандартный контрол для выбора значений из справочников для выбора Регистраторов и Контрагентов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2052 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model_ru.properties
@@ -14,8 +14,6 @@ lecm-contract_model.property.lecm-contract_dateConclusionContracts.title=\u0414\
 lecm-contract_model.property.lecm-contract_dateConclusionContracts.description=\u0414\u0430\u0442\u0430 \u0437\u0430\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u044F \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract_model.property.lecm-contract_summaryContent.title=\u041A\u0440\u0430\u0442\u043A\u043E\u0435 \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract_model.property.lecm-contract_summaryContent.description=\u041A\u0440\u0430\u0442\u043A\u043E\u0435 \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
-lecm-contract_model.property.lecm-contract_partner.title=\u041A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442
-lecm-contract_model.property.lecm-contract_partner.description=\u041A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442
 lecm-contract_model.property.lecm-contract_currency.title=\u0412\u0430\u043B\u044E\u0442\u0430 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract_model.property.lecm-contract_currency.description=\u0412\u0430\u043B\u044E\u0442\u0430 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract_model.property.lecm-contract_totalSum.title=\u041E\u0431\u0449\u0430\u044F \u0441\u0443\u043C\u043C\u0430 \u043F\u043E \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443
@@ -26,9 +24,11 @@ lecm-contract_model.property.lecm-contract_endDate.title=\u0414\u0430\u0442\u043
 lecm-contract_model.property.lecm-contract_endDate.description=\u0414\u0430\u0442\u0430 \u043E\u043A\u043E\u043D\u0447\u0430\u043D\u0438\u044F \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract_model.property.lecm-contract_unlimited.title=\u0411\u0435\u0441\u0441\u0440\u043E\u0447\u043D\u044B\u0439
 lecm-contract_model.property.lecm-contract_unlimited.description=\u0411\u0435\u0441\u0441\u0440\u043E\u0447\u043D\u044B\u0439
-lecm-contract_model.property.lecm-contract_registrator.title=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
-lecm-contract_model.property.lecm-contract_registrator.description=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
 lecm-contract_model.property.lecm-contract_locationRegistration.title=\u041C\u0435\u0441\u0442\u043E \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438
 lecm-contract_model.property.lecm-contract_locationRegistration.description=\u041C\u0435\u0441\u0442\u043E \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438
 lecm-contract_model.property.lecm-contract_locationContract.title=\u041C\u0435\u0441\u0442\u043E\u043D\u0430\u0445\u043E\u0436\u0434\u0435\u043D\u0438\u0435 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract_model.property.lecm-contract_locationContract.description=\u041C\u0435\u0441\u0442\u043E\u043D\u0430\u0445\u043E\u0436\u0434\u0435\u043D\u0438\u0435 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+lecm-contract_model.association.lecm-contract_partner-assoc.title=\u041A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442
+lecm-contract_model.association.lecm-contract_partner-assoc.description=\u041A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442
+lecm-contract_model.association.lecm-contract_registrator-assoc.title=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
+lecm-contract_model.association.lecm-contract_registrator-assoc.description=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
