[+]ALF-751  АРМ. Договора
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2068 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts_ru.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts_ru.properties
@@ -13,3 +13,10 @@ page.contracts-documents.filter=(\u043E\u0442\u0444\u0438\u043B\u044C\u0442\u044
 
 page.contracts-reports=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 -> \u041E\u0442\u0447\u0435\u0442\u044B
 
+contract.regProjectNumber=\u041D\u043E\u043C\u0435\u0440 \u043F\u0440\u043E\u0435\u043A\u0442\u0430
+contract.regNumber=\u041D\u043E\u043C\u0435\u0440 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+contract.parther=\u041A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442
+contract.type=\u0412\u0438\u0434 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+contract.status=\u0421\u0442\u0430\u0442\u0443\u0441
+contract.conclusionDate=\u0414\u0430\u0442\u0430 \u0437\u0430\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u044F
+
