--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts_ru.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts_ru.properties
@@ -28,3 +28,5 @@ contract.contractTime.baseOnDocument=\u041E\u0441\u043D\u043E\u0432\u0430\u043D\
 contract.contractTime.fromTime=\u041D\u0430\u0447\u0430\u043B\u043E \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
 contract.contractTime.toTime=\u0417\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0438\u0435 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
 
+contract.contractTermination.baseOnDocument=\u041E\u0441\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+
