ВНИМАНИЕ! Изменены модели данных, так что все может сломаться! Причесаны модели данных для параллельного и последовательного согласования: избавился от лишних файлов, свел все в два неймспейса вместо четырех, добавил properties-файлы для последовального согласования.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2284 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-approval/repo/src/main/config/messages/lecm-parallel-approval-workflow-model_ru.properties
+++ b/lecm-approval/repo/src/main/config/messages/lecm-parallel-approval-workflow-model_ru.properties
@@ -1,4 +1,4 @@
-lecmPaWf_parallelApprovalWorkflow.lecmPaWf_parallelApproval.title=\u041F\u0430\u0440\u0430\u043B\u043B\u0435\u043B\u044C\u043D\u043E\u0435 \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u0435
-lecmPaWf_parallelApprovalWorkflow.lecmPaWf_parallelApproval.description=\u041F\u0430\u0440\u0430\u043B\u043B\u0435\u043B\u044C\u043D\u043E\u0435 \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u0435
-lecmPaWf_parallelApprovalWorkflow.association.lecmPaWf_employeesAssoc.title=\u0421\u043E\u0433\u043B\u0430\u0441\u0443\u044E\u0449\u0438\u0435
-lecmPaWf_parallelApprovalWorkflow.association.lecmPaWf_employeesAssoc.description=\u0421\u043E\u0433\u043B\u0430\u0441\u0443\u044E\u0449\u0438\u0435
+lecmPar_parallelApprovalWorkflow.lecmPar_parallelApproval.title=\u041f\u0430\u0440\u0430\u043b\u043b\u0435\u043b\u044c\u043d\u043e\u0435 \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u0435
+lecmPar_parallelApprovalWorkflow.lecmPar_parallelApproval.description=\u041f\u0430\u0440\u0430\u043b\u043b\u0435\u043b\u044c\u043d\u043e\u0435 \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u0435
+lecmPar_parallelApprovalWorkflow.association.lecmPar_employeesAssoc.title=\u0421\u043e\u0433\u043b\u0430\u0441\u0443\u044e\u0449\u0438\u0435
+lecmPar_parallelApprovalWorkflow.association.lecmPar_employeesAssoc.description=\u0421\u043e\u0433\u043b\u0430\u0441\u0443\u044e\u0449\u0438\u0435
