кастомизация формы принятия решения о согласовании
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2336 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-approval/repo/src/main/config/messages/lecm-parallel-approval-workflow-model_ru.properties
+++ b/lecm-approval/repo/src/main/config/messages/lecm-parallel-approval-workflow-model_ru.properties
@@ -2,3 +2,7 @@ lecmPar_parallelApprovalWorkflow.lecmPar_parallelApproval.title=\u041f\u0430\u04
 lecmPar_parallelApprovalWorkflow.lecmPar_parallelApproval.description=\u041f\u0430\u0440\u0430\u043b\u043b\u0435\u043b\u044c\u043d\u043e\u0435 \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u0435
 lecmPar_parallelApprovalWorkflow.association.lecmPar_employeesAssoc.title=\u0421\u043e\u0433\u043b\u0430\u0441\u0443\u044e\u0449\u0438\u0435
 lecmPar_parallelApprovalWorkflow.association.lecmPar_employeesAssoc.description=\u0421\u043e\u0433\u043b\u0430\u0441\u0443\u044e\u0449\u0438\u0435
+listconstraint.lecmPar_approveTaskResultConstraint.APPROVED=\u0421\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u0442\u044c
+listconstraint.lecmPar_approveTaskResultConstraint.APPROVED_WITH_REMARK=\u0421\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u0442\u044c \u0441 \u0437\u0430\u043c\u0435\u0447\u0430\u043d\u0438\u044f\u043c\u0438
+listconstraint.lecmPar_approveTaskResultConstraint.REJECTED=\u041e\u0442\u043a\u043b\u043e\u043d\u0438\u0442\u044c
+lecmPar_parallelApprovalWorkflow.association.lecmPar_approveTaskCommentAssoc.title=\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442 \u0441 \u043a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u044f\u043c\u0438
