ALF-830 Добавлен автор документа в дашлеты и списки
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2436 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model_ru.properties
@@ -1,7 +1,9 @@
 lecm-contract_model.type.lecm-contract_document.title=\u0414\u043E\u0433\u043E\u0432\u043E\u0440
 lecm-contract_model.type.lecm-contract_document.description=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u043D\u043E\u0439 \u0434\u0435\u044F\u0442\u0435\u043B\u044C\u043D\u043E\u0441\u0442\u0438
-lecm-contract_model.property.cm_name.title=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-lecm-contract_model.property.cm_name.description=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+cm_contentmodel.property.cm_name.title=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+cm_contentmodel.property.cm_name.description=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+cm_contentmodel.property.cm_creator.title=\u0410\u0432\u0442\u043E\u0440
+cm_contentmodel.property.cm_creator.description=\u0410\u0432\u0442\u043E\u0440
 lecm-contract_model.property.lecm-contract_regNumProject.title=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u043E\u043D\u043D\u044B\u0439 \u2116 \u043F\u0440\u043E\u0435\u043A\u0442\u0430
 lecm-contract_model.property.lecm-contract_regNumProject.description=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u043E\u043D\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440 \u043F\u0440\u043E\u0435\u043A\u0442\u0430 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract_model.property.lecm-contract_regNumSystem.title=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u043E\u043D\u043D\u044B\u0439 \u2116
